    sleep dialog.
44. Increase toolbar background blur.
45. Remove fade in of now-playing cover change.
46. Swipe up from now-playing text to show MAI.
47. Swipe down on MAI artist/album image to close MAI.
48. When showing artist use trackartist in preference to artist.
49. Use header styles for MAI in columns as per tabs.

4.0.4
-----
1. In album style, embolden current track title even if first track in album.
2. Fix warning when changing queue view to/from album style.
3. Fix hover buttons overlapping time when listing playlist tracks.
4. Only show player menu when clicking title of 'Player settings' if there are
   multiple players.
5. Improve swipe sensitivity.
6. Fix some clipping on mobile thick now-playing bar.

4.0.3
-----
 1. Fix restating LMS from 'Server settings' page.
 2. Improve/fix album style queue for radio streams.
 3. Don't group by release type if LMS is set to ignore this.
 4. Only call 'Slim::Schema::Album->releaseTypes' for LMS 8.4 or newer.
 5. When adding/playing all discs of multi-disc set use album_id.
 6. In album style queue, group albums by disc number.
 7. Fix missing add/play hover buttons on tracks in browse view.
 8. Fix swipe to change track.
 9. Set default queue transfer method to 'Move'.
10. Fix toggle queue icon when using coloured toolbars.
11. Hide toolbar elements if insufficient width.
12. Fix breakage on older iOS.

4.0.2
-----
 1. Respect LMS's setting to not group by release type.
 2. Add jumplist support when showing multiple release types.
 3. Don't highlight active jumplist item.
 4. Remove option for letter overlay whilst scrolling.
 5. Fix reading some LMS prefs where LMS returns '?'.
 6. Only request artist_ids when searching if LMS 8.4 or newer.
 7. Allow user-supplied backdrops, by placing into
    prefs/material-skin/backdrops
 8. Query LMS for release type names.
 9. Fix play button showing in mobile layout when no tracks in queue.
10. Remove link to user guide, its out of date.