@@ -966,8 +966,14 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
             }
         },
         barClicked(ev) {
-            if (IS_MOBILE && this.desktopLayout && window.innerWidth<550 && (ev.x<(window.innerWidth-(window.innerWidth>420 ? 90 : 60)))) {
-                bus.$emit('expandNowPlaying', true);
+            if (IS_MOBILE && ev && ev.target && ev.target.className && !ev.target.className.includes('v-icon')) {
+                if (!this.desktopLayout) {
+                    if (MBAR_THICK==this.$store.state.mobileBar) {
+                        this.$store.commit('setPage', 'now-playing');
+                    }
+                } else if (window.innerWidth<550 && (ev.x<(window.innerWidth-(window.innerWidth>420 ? 90 : 60)))) {
+                    bus.$emit('expandNowPlaying', true);
+                }
             }
         },
         clearClickTimeout() {
