@@ -60,6 +60,7 @@
 47. Swipe down on MAI artist/album image to close MAI.
 48. When showing artist use trackartist in preference to artist.
 49. Use header styles for MAI in columns as per tabs.
+50. Touching thick now-playing bar in mobile view switche to playing tab.
 
 4.0.4
 -----
